# electrix_sync

./: README.md  pyproject.toml
electrix_sync/: hooks.py  install.py  modules.txt  patches.txt  v16_setup.py
electrix_sync/api/: account_sync.py  bulk_sync.py  event_sync_state.py  location_sync.py  locations.py  master_data.py  operational_sync.py  outbound_sync.py  planning.py  realtime_sync.py  sidebar.py  stel.py  sync.py
electrix_sync/config/: stel_bulk_endpoints.json
electrix_sync/electrix_sync/doctype/electrix_sync_log/: electrix_sync_log.json  electrix_sync_log.py
electrix_sync/electrix_sync/doctype/electrix_sync_settings/: electrix_sync_settings.js  electrix_sync_settings.json  electrix_sync_settings.py
electrix_sync/electrix_sync/doctype/lugar/: lugar.json  lugar.py
electrix_sync/electrix_sync/doctype/lugar_stel_link/: lugar_stel_link.json  lugar_stel_link.py
electrix_sync/electrix_sync/doctype/stel_bulk_sync_run/: stel_bulk_sync_run.js  stel_bulk_sync_run.json  stel_bulk_sync_run.py
electrix_sync/electrix_sync/doctype/stel_event_assignment/: stel_event_assignment.json  stel_event_assignment.py
electrix_sync/electrix_sync/doctype/stel_event_type/: stel_event_type.json  stel_event_type.py
electrix_sync/electrix_sync/page/planning/: planning.js  (+1 more)
electrix_sync/patches/v1_0/: add_employee_sync_fields.py  create_sync_fields.py
electrix_sync/public/css/: desk.css  planning.css  planning_calendar.css
electrix_sync/public/js/: event.js  planning.js
electrix_sync/tests/: test_bulk_sync.py  test_location_sync.py  test_master_data.py  test_sync.py
(+4 files in other folders)
