[project]
name = "electrix_sync"
authors = [
    { name = "Electrix" }
]
description = "Sync STEL Order customers and leads into ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe",
    "requests",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[tool.black]
line-length = 110
